# artemis-light

./: Cargo.toml  README.md
.github/: test.yml
.github/workflows/: test.yml
src/: collector_ext.rs  engine.rs  executor_ext.rs  lib.rs  strategy_ext.rs  types.rs
src/collectors/: archive_collector.rs  archive_collector_ext.rs  block_collector.rs  collector_ext.rs  event_collector.rs  indexed_event_collector.rs  log_collector.rs  mempool_collector.rs  mod.rs
src/collectors/archive_collector_ext/: enumerate.rs  filter_map.rs  merge.rs
src/collectors/collector_ext/: enumerate_with.rs  filter_map.rs  indexed_with.rs  load_from.rs  map.rs  merge.rs  persist.rs
src/executor_ext/: instrument.rs
src/executors/: mempool_executor.rs  mod.rs
src/persistence/: mod.rs  sql_storage.rs
src/persistence/migrations/: 20250929011818_events.sql  events.rs
src/strategy_ext/: instrument.rs
tests/: main.rs
