[package]
name = "artemis-light"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## async
async-trait = "0.1"
futures = { git = "https://github.com/rust-lang/futures-rs.git", branch = "master" }
tokio = { version = "1.44", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
jsonrpsee = { version = "0.24", features = ["client", "async-client"] }
alloy = { version = "1.0", features = [
    "full",
    "node-bindings",
] }
## misc
anyhow = "1.0.97"
tracing = "0.1.41"
thiserror = "2.0.12"
tokio-util = "0.7.17"